# haskell-optimization

./: .gitignore  LICENSE  README.md  makefile  package.json  paragon-optimization.cabal  stack.yaml  test.sh  tsconfig.json
src/: Cards.hs  DamagePen.hs  Main.hs  Optimization.hs  Types.hs  cards.csv  cards.html  script.js
static/html/: index.html
static/src/: main.js  main.ts
test/: CardsTest.hs  MainTest.hs
