name:                paragon-optimization
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/steveshogren/paragon-optimization#readme
license:             BSD3
license-file:        LICENSE
author:              Steve Shogren
maintainer:          steve.a.shogren@gmail.com
copyright:           value
category:            value
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable paragon-optimization
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       aeson >= 1.0.2.1
                     , base >= 4.7 && < 5
                     , containers >= 0.5.6.2
                     , mtl >= 2.2.1
                     , glpk-hs
                     , lens >= 4.12.3
                     , scotty
