name:                paragon-optimization
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/steveshogren/paragon-optimization#readme
license:             BSD3
license-file:        LICENSE
author:              Steve Shogren
maintainer:          steve.a.shogren@gmail.com
copyright:           value
category:            value
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable paragon-optimization
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:  Cards
                , DamagePen
                , Optimization
                , Types

  build-depends:       aeson >= 1.0.2.1
                     , base >= 4.7 && < 5
                     , containers >= 0.5.6.2
                     , glpk-hs
                     , lens >= 4.12.3
                     , mtl >= 2.2.1
                     , scotty
                     , tasty >= 0.11.2
                     , tasty-hunit >= 0.9.2
                     , wai-extra >=3.0.0
                     , wai-middleware-static

test-suite paragon-optimization-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src, test
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       CardsTest
                     , Cards
                     , DamagePen
                     , Optimization
                     , Types

  default-language:    Haskell2010
  main-is:             MainTest.hs
  build-depends:       HUnit >= 1.2.5.2
                     , aeson >= 1.0.2.1
                     , base >= 4.7 && < 5
                     , containers >= 0.5.6.2
                     , glpk-hs
                     , lens >= 4.12.3
                     , mtl >= 2.2.1
                     , scotty
                     , tasty
                     , tasty >= 0.11.2
                     , tasty-hunit
                     , tasty-hunit >= 0.9.2
                     , wai-extra >=3.0.0
                     , wai-middleware-static